--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="another_text_view">More Text</string>
+
     <string-array name="states">
         <item>Alabama</item>
         <item>Alaska</item>
@@ -57,5 +58,9 @@
         <item>West Virginia</item>
         <item>Wyoming</item>
     </string-array>
+
+    <string name="title_activity_my">MyActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
