--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,6 @@
         <item>West Virginia</item>
         <item>Wyoming</item>
     </string-array>
-
     <string-array name="capitals">
         <item>Montgomery</item>
         <item>Juneau</item>
@@ -115,5 +114,6 @@
     <string name="title_activity_my">MyActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_my_web_view">MyWebViewActivity</string>
 
 </resources>
